--- a/PostgreSQLRole/defaults/main.yml
+++ b/PostgreSQLRole/defaults/main.yml
@@ -6,7 +6,7 @@ postgresql_enablerepo: "pgdg-redhat-repo-latest.noarch.rpm"
 # `restarted` or `reloaded`
 postgresql_restarted_state: "restarted"
 
-postgresql_python_library: python-psycopg2
+postgresql_python_library: python-psycopg
 postgresql_user: postgres
 postgresql_group: postgres
 
