--- a/PostgreSQLRole/tasks/initialize.yml
+++ b/PostgreSQLRole/tasks/initialize.yml
@@ -14,14 +14,14 @@
     state: directory
     mode: 0700
 
-- name: Check if PostgreSQL database is initialized.
-  stat:
-    path: "{{ postgresql_data_dir }}/PG_VERSION"
-  register: pgdata_dir_version
+# - name: Check if PostgreSQL database is initialized.
+#  stat:
+#    path: "{{ postgresql_data_dir }}/PG_VERSION"
+#  register: pgdata_dir_version
 
 - name: Ensure PostgreSQL database is initialized.
   command: "{{ postgresql_bin_path }}/initdb -D {{ postgresql_data_dir }}"
-  when: not pgdata_dir_version.stat.exists
+#  when: not pgdata_dir_version.stat.exists
   become: yes
   become_user: "{{ postgresql_user }}"
 
