--- a/PostgreSQLRole/vars/RedHat-8.yml
+++ b/PostgreSQLRole/vars/RedHat-8.yml
@@ -1,9 +1,9 @@
 ---
 postgresql_version: "12"
-postgresql_data_dir: "/var/lib/postgresql/{{ postgresql_version }}/main"
-postgresql_bin_path: "/usr/lib/postgresql/{{ postgresql_version }}/bin"
-postgresql_config_path: "/etc/postgresql/{{ postgresql_version }}/main"
-postgresql_daemon: "postgresql@{{ postgresql_version }}-main"
+postgresql_data_dir: "/var/lib/pgsql/data"
+postgresql_bin_path: "/usr/bin"
+postgresql_config_path: "/etc/postgresql/12/main"
+postgresql_daemon: postgresql
 postgresql_packages:
   - postgresql12-12.5-1PGDG.rhel8.x86_64.rpm
   - postgresql12-libs-12.5-1PGDG.rhel8.x86_64.rpm
