--- a/PostgreSQLRole/tasks/initialize.yml
+++ b/PostgreSQLRole/tasks/initialize.yml
@@ -15,16 +15,17 @@
     mode: 0700
 
 # - name: Check if PostgreSQL database is initialized.
-#  stat:
-#    path: "{{ postgresql_data_dir }}/PG_VERSION"
+#   stat:
+#     path: "{{ postgresql_data_dir }}"
 #  register: pgdata_dir_version
 
 - name: Ensure PostgreSQL database is initialized.
-  command: "{{ postgresql_bin_path }}/initdb -D {{ postgresql_data_dir }}"
+  command: "{{ postgresql_bin_path }} initdb"
 #  when: not pgdata_dir_version.stat.exists
   become: yes
   become_user: "{{ postgresql_user }}"
 
   vars:
     ansible_ssh_pipelining: true
+
 
