--- a/PostgreSQLRole/tasks/setup-RedHat.yml
+++ b/PostgreSQLRole/tasks/setup-RedHat.yml
@@ -1,20 +1,22 @@
 ---
-- name: "Transfer RPM files to remote machine"
+- name: "Transfer Files"
   copy:
     src: "/home/ansible/postgresql_packages/{{ item }}"
-    dest: /home/ansible/postgresql_packages/
+    dest: /root/postgresql_packages/
   loop: "{{ postgresql_packages }}"
   register: copied
 
-- name: "Install Local RPMs"
+- name: "Install Local RPM postgresql12-libs"
   yum:
-    name: "/home/ansible/postgresql_packages/{{ item }}"
+    name: /root/postgresql_packages/postgresql12-libs-12.5-1PGDG.rhel8.x86_64.rpm
     state: present
-    loop: "{{ postgresql_packages }}"
-  
 
-#- name: Ensure PostgreSQL packages are installed.
-#  yum:
-#    name: "{{ copied | json_query('results[].dest[]') }}"
-#    disable_gpg_check: True
-#    state: present
+- name: "Install Local RPM postgresql12"
+  yum:
+    name: /root/postgresql_packages/postgresql12-12.5-1PGDG.rhel8.x86_64.rpm
+    state: present
+
+- name: "Install Local RPM postgresql12-server"
+  yum:
+    name: /root/postgresql_packages/postgresql12-server-12.5-1PGDG.rhel8.x86_64.rpm
+    state: present
