--- a/PostgreSQLRole/vars/RedHat-8.yml
+++ b/PostgreSQLRole/vars/RedHat-8.yml
@@ -1,7 +1,7 @@
 ---
 postgresql_version: "12"
 postgresql_data_dir: "/var/lib/pgsql/data"
-postgresql_bin_path: "/usr/bin"
+postgresql_bin_path: "/usr/pgsql-12/bin/postgresql-12-setup"
 postgresql_config_path: "/etc/postgresql/12/main"
 postgresql_daemon: postgresql
 postgresql_packages:
