--- a/PostgreSQLRole/tasks/initialize.yml
+++ b/PostgreSQLRole/tasks/initialize.yml
@@ -13,18 +13,19 @@
     group: "{{ postgresql_group }}"
     state: directory
     mode: 0700
+  register: pgdata_dir_exist
 
-# - name: Check if PostgreSQL database is initialized.
-#   stat:
-#     path: "{{ postgresql_data_dir }}"
-#  register: pgdata_dir_version
+- name: Check if PostgreSQL database is initialized.
+  stat:
+    path: "{{ postgresql_data_dir }}/PG_VERSION"
+  register: pgdata_dir_version
 
 - name: Ensure PostgreSQL database is initialized.
-  command: "{{ postgresql_bin_path }} initdb"
-#  when: not pgdata_dir_version.stat.exists
+  command: "{{ postgresql_bin_path }}/initdb -D {{ postgresql_data_dir }}"
+  when: not pgdata_dir_version.stat.exists
   become: yes
   become_user: "{{ postgresql_user }}"
-
+ 
   vars:
     ansible_ssh_pipelining: true
 
