--- a/PostgreSQLRole/vars/RedHat-8.yml
+++ b/PostgreSQLRole/vars/RedHat-8.yml
@@ -1,13 +1,22 @@
 ---
 postgresql_version: "12"
-postgresql_data_dir: "/var/lib/pgsql/data"
-postgresql_bin_path: "/usr/bin"
-postgresql_config_path: "/var/lib/pgsql/data"
+postgresql_varlib_directory_name: "postgresql"
+postgresql_data_dir: "/var/lib/{{ postgresql_varlib_directory_name }}/{{ postgresql_version }}"
+postgresql_bin_path: "/usr/pgsql-{{postgresql_version}}/bin"
+postgresql_config_path: "/etc/postgresql/{{ postgresql_version }}"
 postgresql_daemon: postgresql
 postgresql_packages:
   - postgresql12-12.5-1PGDG.rhel8.x86_64.rpm
   - postgresql12-libs-12.5-1PGDG.rhel8.x86_64.rpm
   - postgresql12-server-12.5-1PGDG.rhel8.x86_64.rpm
 postgresql_unix_socket_directories_mode: '0755'
-postgresql_python_library: python3-psycopg2
+
+#postgresql_python_library: 
+#  - python3-psycopg2
+#  - python-pycurl
+#  - glibc-common
+#  - epel-release
+#  - libselinux-python
+#  - ca-certificates
+#  - python-psycopg2
 
