--- a/PostgreSQLRole/vars/RedHat-8.yml
+++ b/PostgreSQLRole/vars/RedHat-8.yml
@@ -1,7 +1,8 @@
 ---
 postgresql_version: "12"
 postgresql_varlib_directory_name: "postgresql"
-postgresql_data_dir: "/var/lib/{{ postgresql_varlib_directory_name }}/{{ postgresql_version }}"
+postgresql_cluster_name: "data"
+postgresql_data_dir: "/var/lib/{{ postgresql_varlib_directory_name }}/{{ postgresql_version }}/{{ postgresql_cluster_name }}"
 postgresql_bin_path: "/usr/pgsql-{{postgresql_version}}/bin"
 postgresql_config_path: "/var/lib/{{ postgresql_varlib_directory_name }}/{{ postgresql_version }}"
 postgresql_daemon: "postgresql-{{ postgresql_version }}"
