--- a/PostgreSQLRole/vars/RedHat-8.yml
+++ b/PostgreSQLRole/vars/RedHat-8.yml
@@ -2,9 +2,11 @@
 postgresql_version: "12"
 postgresql_varlib_directory_name: "postgresql"
 postgresql_cluster_name: "data"
-postgresql_data_dir: "/var/lib/{{ postgresql_varlib_directory_name }}/{{ postgresql_version }}/{{ postgresql_cluster_name }}"
+postgresql_home_dir: "/var/lib/pgsql"
+postgresql_data_dir: "/var/lib/pgsql/{{ postgresql_version }}/{{ postgresql_cluster_name }}"
+postgresql_config_path: "/var/lib/pgsql/{{ postgresql_version }}/{{ postgresql_cluster_name }}"
 postgresql_bin_path: "/usr/pgsql-{{postgresql_version}}/bin"
-postgresql_config_path: "/var/lib/{{ postgresql_varlib_directory_name }}/{{ postgresql_version }}"
+postgresql_log_dir: "/var/log/postgresql"
 postgresql_daemon: "postgresql-{{ postgresql_version }}"
 postgresql_packages:
   - postgresql12-12.5-1PGDG.rhel8.x86_64.rpm
