--- a/PostgreSQLRole/vars/RedHat-8.yml
+++ b/PostgreSQLRole/vars/RedHat-8.yml
@@ -1,6 +1,6 @@
 ---
 postgresql_version: "12"
-postgresql_varlib_directory_name: "postgresql"
+# postgresql_varlib_directory_name: "postgresql"
 postgresql_cluster_name: "data"
 postgresql_home_dir: "/var/lib/pgsql"
 postgresql_data_dir: "/var/lib/pgsql/{{ postgresql_version }}/{{ postgresql_cluster_name }}"
