--- a/PostgreSQLRole/defaults/main.yml
+++ b/PostgreSQLRole/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
 # RHEL/CentOS only. Set a repository to use for PostgreSQL installation.
-postgresql_enablerepo: "pgdg-redhat-repo-latest.noarch.rpm"
+postgresql_enablerepo: ""
 
 # Set postgresql state when configuration changes are made. Recommended values:
 # `restarted` or `reloaded`
