--- a/PostgreSQLRole/tasks/setup-RedHat.yml
+++ b/PostgreSQLRole/tasks/setup-RedHat.yml
@@ -13,15 +13,5 @@
 
 - name: "Install Local RPM postgresql12-libs"
   yum:
-    name: /root/postgresql_packages/postgresql12-libs-12.5-1PGDG.rhel8.x86_64.rpm
-    state: present
-
-- name: "Install Local RPM postgresql12"
-  yum:
-    name: /root/postgresql_packages/postgresql12-12.5-1PGDG.rhel8.x86_64.rpm
-    state: present
-
-- name: "Install Local RPM postgresql12-server"
-  yum:
-    name: /root/postgresql_packages/postgresql12-server-12.5-1PGDG.rhel8.x86_64.rpm
+    name: name: "{{  postgresql_packages  }}"
     state: present
