--- a/PostgreSQLRole/vars/RedHat-8.yml
+++ b/PostgreSQLRole/vars/RedHat-8.yml
@@ -3,11 +3,11 @@ postgresql_version: "12"
 # postgresql_varlib_directory_name: "postgresql"
 postgresql_cluster_name: "data"
 postgresql_home_dir: "/var/lib/pgsql"
-postgresql_data_dir: "/var/lib/pgsql/{{ postgresql_version }}/{{ postgresql_cluster_name }}"
-postgresql_config_path: "/var/lib/pgsql/{{ postgresql_version }}/{{ postgresql_cluster_name }}"
-postgresql_bin_path: "/usr/pgsql-{{postgresql_version}}/bin"
-postgresql_log_dir: "/var/log/postgresql"
-postgresql_daemon: "postgresql-{{ postgresql_version }}"
+postgresql_data_dir: "/var/lib/pgsql/12/data"
+postgresql_config_path: "/var/lib/pgsql/12/data"
+postgresql_bin_path: "/usr/pgsql-12/bin"
+# postgresql_log_dir: "/var/log/postgresql"
+postgresql_daemon: "postgresql-12"
 postgresql_packages:
   - postgresql12-libs-12.5-1PGDG.rhel8.x86_64.rpm
   - postgresql12-12.5-1PGDG.rhel8.x86_64.rpm
