--- a/PostgreSQLRole/tasks/setup-RedHat.yml
+++ b/PostgreSQLRole/tasks/setup-RedHat.yml
@@ -1,4 +1,11 @@
 ---
+- name: "Transfer Files"
+  copy:
+    src: "{{ item }}"
+    dest: /root/postgresql_packages/
+  loop: "{{ postgresql_packages }}"
+  register: copied
+
 - name: Import Postgresql-12 GPG key from a url
   rpm_key:
     state: present
@@ -6,5 +13,15 @@
 
 - name: "Install Local RPM postgresql12-libs"
   yum:
-    name: "files/{{  postgresql_packages  }}"
+    name: /root/postgresql_packages/postgresql12-libs-12.5-1PGDG.rhel8.x86_64.rpm
+    state: present
+
+- name: "Install Local RPM postgresql12"
+  yum:
+    name: /root/postgresql_packages/postgresql12-12.5-1PGDG.rhel8.x86_64.rpm
+    state: present
+
+- name: "Install Local RPM postgresql12-server"
+  yum:
+    name: /root/postgresql_packages/postgresql12-server-12.5-1PGDG.rhel8.x86_64.rpm
     state: present
